--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
   font-family: 'Josefin Sans', sans-serif;
 }
 
-body {
+body,
+html {
   height: 100% !important;
   width: 100% !important;
 }
@@ -13,36 +14,32 @@ body {
   margin-bottom: 100px;
 }
 
-.text-on-img {
-  position: absolute;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.border-on-img {
-  position: absolute;
-  top: 31%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.border2-on-img {
-  position: absolute;
-  top: 39%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.text-about-me {
+.content-on-img {
+  text-align: center;
+  margin: auto;
   position: absolute;
   top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.container1 {
+.wrap {
   position: relative;
-  text-align: center;
-  color: white;
+  background: url(https://images.unsplash.com/photo-1520583457224-aee11bad5112?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29kZSUyMGNvZmZlZXxlbnwwfHwwfHw%3D&w=1000&q=80);
+  background-attachment: fixed;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.grain {
+  width: 100%;
+  height: 100%;
+  background: url(https://html5book.ru/wp-content/uploads/2017/01/stripe-black.png);
+  position: absolute;
+  top: 0;
+  left: 0;
 }
