--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,14 @@ html {
   padding-top: 120px;
 }
 
+.content-my-skills {
+  padding-top: 120px;
+}
+
+.send-me {
+  padding-top: 120px;
+}
+
 .content-on-img {
   text-align: center;
   margin: auto;
@@ -52,4 +60,16 @@ html {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.links-on-projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-project {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
